# walnut

./: .clangd  .gitignore  .gitmodules  BOOTX64.EFI  Cargo.toml  Makefile  Makefile.toml  README.md  TODO  kernel_x64.elf  linker.ld  makefile  out  x86_64-aos.json
.cargo/: config.toml
.github/workflows/: rust.yml
Include/: efi.h  macros.h  types.h
Include/efi/: boot.h  error.h  memory.h  print.h  table.h  types.h
Include/types/: std.h
Source/: efi.h  main.c
Source/Boot/Efi/: memory.h  print.c
assets/: README.md
bootloader/: Cargo.toml
bootloader/.cargo/: config
bootloader/src/: lib.rs  main.rs  page_table.rs
docs/: memory.md
gdb/: config.gdb  gdb.sh
include/: boot.h  macros.h  print.h  types.h
include/boot/graphics/: framebuffer.h
include/libc/: string.h
include/macros/: efi.h
include/types/: std.h
kernel/: Cargo.toml
kernel/src/: lang.rs  main.rs
kernel/src/io/: console.rs  mod.rs  serial.rs
misc/lds/: kernel.ld  kernel.ld.bak
misc/scripts/: config.gdb  disas.sh  runner.sh
ovmf-bins/: OVMF_VARS-pure-efi.fd
scripts/: dd.sh  debug.sh  qemu-rpi-run.sh  qemu.sh  qemu_run.sh  run.sh
scripts/serial/: minipush.rb  miniterm.rb
shared/qemu/: Cargo.toml  README.md
shared/qemu/src/: lib.rs
src/: acpi.rs  console.rs  core_fns.rs  cpu.rs  efi.rs  error.rs  lib.rs  main.c  main.rs  mm.rs  paging.rs  panic_wait.rs  print.rs  qemu.rs  register.rs  serial.rs
src/Efi/: boot.c  memory.c  print.c
src/Efi/graphics/: graphics.c
src/acpi/: mod.rs  structures.rs
src/acpi/structures/: apic.rs  madt.rs  rsdp.rs
src/arch/: mod.rs
src/arch/aarch64/: cpu.rs
src/arch/x86_64/: core_requirements.rs  cpuid.rs  idt.rs  mod.rs  register.rs
src/asm/: boot.s  entry.s  exports.s  mod.rs  trap.s
src/boot/: boot.c  graphics.c  memory.c  print.c
src/boot/asm/: chkstk.s  qemu.s
src/bootloader/: loader.c
src/bsp/: README.md  mod.rs
src/bsp/rpi4/: console.rs  cpu.rs  link.ld
src/cpu/: boot.rs  mod.rs  mode.rs  port.rs  trap.rs
src/cpu/csr/: mod.rs
src/cpu/trap/: mod.rs
src/cpu/util/: mod.rs
src/drivers/: mod.rs  uart_16550.rs
src/efi/: acpi.rs  memory.rs  mod.rs  structures.rs
src/efi/acpi/: mod.rs
src/graphics/: vga.rs
src/init/: log.rs  mod.rs
src/io/: serial.rs
src/io/serial/: mod.rs  uart.rs
src/kernel/: init.c  kernel.c  main.c  mod.rs
src/kernel/boot/: boot.s  mem.s
src/kernel/include/: common.h  io.h  mem.h  page.h  print.h  (+3 more)
src/libc/: README.md  string.c
src/mem/: addr.rs  kalloc.rs  mod.rs  page.rs  pages.rs  table.rs
src/memory/: allocator.rs  mod.rs
src/mm/: mod.rs  phys.rs  rangeset.rs  virt.rs
src/pith/: allocator.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs
src/sync/: mod.rs  mutex.rs  spinlock.rs
src/sys/: panic.rs
src/util/: error.rs  mod.rs  panic.rs
tests/: TODO.md  basic_boot.rs  heap_allocation.rs  kernel_stack_overflow.rs  should_panic.rs
walnut_os/: Cargo.toml  TODO.md  rust-toolchain.toml
walnut_os/.cargo/: config.toml
walnut_os/scripts/: debug.sh
walnut_os/src/: lib.rs  main.rs  serial.rs
walnut_os/src/arch/: mod.rs
walnut_os/src/arch/amd64/: mod.rs
walnut_os/src/arch/amd64/cpu/: port.rs
walnut_os/src/arch/amd64/cpu/interrupts/: entry.rs  exceptions.rs  gdt.rs  idt.rs  mod.rs  pic.rs
walnut_os/src/arch/amd64/cpu/interrupts/idt/: entry.rs
walnut_os/src/arch/amd64/gosling/: mod.rs
walnut_os/src/arch/amd64/gosling/serial/: mod.rs  uart_16550.rs
walnut_os/src/arch/amd64/graphics/vga/: char.rs  colours.rs  mod.rs  writer.rs
walnut_os/src/arch/amd64/memory/: mod.rs  paging.rs
walnut_os/src/gdt/: mod.rs
walnut_os/src/gosling/: mod.rs
walnut_os/src/gosling/serial/: mod.rs  uart_16550.rs
walnut_os/src/interrupts/: exceptions.rs  idt.rs  mod.rs
walnut_os/src/testing/: mod.rs
walnut_os/src/tests/: mod.rs  qemu.rs
walnut_os/src/util/: mod.rs  panic.rs
walnut_os/src/util/sync/: mod.rs
walnut_os/tests/: basic_boot.rs  should_panic.rs
(+38 files in other folders)
