[package]
name = "aos"
version = "0.1.0"
edition = "2018"
authors = ["Tom French <tom@orseti.com>"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "kernel_stack_overflow"
harness = false


[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.4"
uart_16550 = "0.2.15"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.0"

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
  "-display", "none"
  ]
test-success-exit-code = 33         # (0x10 << 1) | 1
run-args = [
"-display", "gtk"
]
