[package]
name = "walnut"
version = "0.1.0"
edition = "2018"
authors = ["Tom French <tom@orseti.com>"]

[dependencies]
bitflags = "1.3.2"
spin = "0.9.2"
uart_16550 = "0.2.15"
qemu = { path = "shared/qemu" }
x86_64 = "0.14.6"
linked_list_allocator = "0.9"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]



[[test]]
name = "should_panic"
harness = false

