[package]
name = "walnut"
version = "0.1.0"
edition = "2018"
authors = ["Tom French <tom@orseti.com>"]

[dependencies]

[profile.release]
lto = true
panic = "abort"

[features]
rpi4 = []


# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "6.x.x" }
