[package]
name = "bootloader"
version = "1.0.0"
authors = ["Senseiod <moyan@iouyi.top>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
uart_16550 = "0.2.10"
uefi = "0.16.0"
uefi-services = "0.13.0"
x86_64 = "0.14.9"
xmas-elf = "0.7.0"

[features]
