[package]
name = "walnut_os"
version = "0.1.0"
authors = ["Tom French <hello@orseti.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
run-command = [
	"qemu-system-x86_64",
	"-drive",
	"format=raw,file={}",
	"-device",
	"isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial",
	"stdio",
]
test-args = ["-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
